src/styles.scss
@import "primeng/resources/primeng.css";
@import "primeicons/primeicons.css";
@import "./primeng-themes.scss";
@import "./primeflex-themes.scss";

:root {
  --positive-color: #1b81e2;
  --neutral-color: #05b9bf;
  --negative-color: #fb3b52;
}

@layer reset, primeng;
@layer reset {
  // RESET
  *,
  *::before,
  *::after {
    box-sizing: border-box;
  }

  body {
    margin: 0;
    padding: 0;
  }
}

// DEFAULT TYPOGRAPHY
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
}

h1 {
  font-size: 46px;
}
h2 {
  font-size: 30px;
}
h3 {
  font-size: 22px;
}
h4 {
  font-size: 18px;
}
h5 {
  font-size: 16px;
}
h6,
label,
p,
button {
  font-size: 12px;
}

.container {
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}
@media (min-width: 768px) {
  .container {
    width: 750px;
  }
}
@media (min-width: 992px) {
  .container {
    width: 970px;
  }
}
@media (min-width: 1200px) {
  .container {
    width: 1400px;
  }
}

.fill-primary {
  fill: var(--primary-color) !important;
}

.fill-negative {
  fill: var(--negative-color) !important;
}

.fill-text-color {
  fill: var(--text-color) !important;
}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f4fa;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--text-color-secondary);
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: var(--text-color);
}

// PRIMENG OVERRIDES
.p-checkbox {
  width: 18px;
  height: 18px;
}
.p-checkbox .p-checkbox-box {
  width: 18px;
  height: 18px;
}

body {
  --bg-color: var(--surface-0);
  --card-color: var(--surface-0);
  background-color: var(--bg-color);
  --border-color: #e5e7eb;

  div,
  // span,
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p {
    color: var(--text-color);
  }
}

body.dark {
  --bg-color: #060619;
  --card-color: #19182b;
  --border-color: #464255;
  background-color: var(--bg-color);

  .border-200 {
    border-color: var(--border-color) !important;
  }

  .p-divider.p-divider-vertical:before {
    border-left: 1px solid var(--border-color) !important;
  }

  .p-divider.p-divider-horizontal:before {
    border-top: 1px solid var(--border-color) !important;
  }

  .p-dropdown-items-wrapper {
    ul {
      background-color: var(--card-color);
    }
  }

  .p-datepicker,
  .p-datepicker-header {
    background-color: var(--card-color);
    .p-highlight {
      background-color: var(--bg-color);
    }
  }

  .p-button-secondary {
    background-color: var(--bg-color);
    border: solid 3px var(--primary-color) !important;
    span {
      color: var(--primary-color) !important;
    }
  }

  .p-tabmenu-nav,
  .p-menuitem-link {
    background-color: var(--bg-color);
    border: 1px solid var(--border-color);
    border-width: 0 0 2px 0;
  }

  div,
  span,
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p {
    color: var(--surface-0) !important;
  }

  p-card div div.p-card-header.ng-star-inserted div p-togglebutton div span {
    color: var(--text-color) !important;
  }

  .p-datatable .p-datatable-thead > tr > th {
    background: var(--bg-color);
    padding: 0 20px 0 0;
    border: 0;
  }

  .p-datatable .p-datatable-tbody > tr {
    background: var(--bg-color);
    td {
      border-color: var(--border-color);
    }
  }

  .p-paginator {
    background-color: var(--bg-color);
  }
  .p-paginator .p-paginator-pages .p-paginator-page {
    color: white;
  }
  .p-paginator .p-paginator-pages .p-paginator-page.p-highlight {
    color: blue;
  }

  .p-tabview-panels {
    background-color: var(--bg-color);
  }

  .p-tabview-nav,
  .p-tabview-nav-link {
    background-color: var(--bg-color);
  }

  input.p-inputtext,
  textarea.p-inputtext {
    background-color: var(--bg-color);
    border: 1px solid var(--border-color);
    color: white;
  }

  .p-dialog-header,
  .p-dialog-content,
  .p-dialog-footer {
    background-color: var(--card-color);
  }

  .p-multiselect-panel
    .p-multiselect-items
    .p-multiselect-item:not(.p-highlight):not(.p-disabled).p-focus,
  .p-multiselect-panel
    .p-multiselect-items
    .p-multiselect-item:not(.p-highlight):not(.p-disabled):hover {
    color: #464255;
    background-color: var(--card-color);
  }
  .p-multiselect-header {
    background-color: var(--bg-color);
  }

  .p-tree,
  .p-treeselect-header {
    background-color: var(--bg-color);
    .p-treenode-content {
      background-color: var(--bg-color);
    }
  }

  .p-paginator-rpp-options {
    background-color: var(--card-color);
    border: 1px solid var(--border-color);
  }
}

